--- a/HTML CSS/layout.css
+++ b/HTML CSS/layout.css
@@ -1,24 +1,29 @@
+body,ul,li,h1,h2,a{
+    margin: 0;
+    padding: 0;
+    font-family: Arial;
+}
+
 header{
     background-color: #f63232;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     position: fixed;
     width: 100%;
+    height: 60px;
     z-index: 1;
-    top: 0;
-    left: 0;
+    top: 0px;
     color: white;
     border: 2px white solid;
-    padding: 4px;
+    padding: 1px;
 }
 header h2{
-
-    left: 0;
+    margin-top: 5px;
     color: white;
-    border: 2px white solid;
+    border: 4px white solid;
     padding: 6px ; 
     display: inline-block;    
-    border-radius: 10px;
+    border-radius: 100px;
 }
 .banner{
     position: relative;
@@ -54,4 +59,60 @@ header h2{
     
     top: 1040px;
     left: 50px;
+}
+nav{
+    background-color: lightyellow;
+    padding: 20px;
+    position: sticky;
+    top: 60px;
+}
+nav li{
+    width: 25%;
+    display: inline-block;
+}
+
+nav ul{
+    white-space: nowrap;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+nav li a{
+    text-decoration: none;
+    color: #5454eb;
+    font-size: 19px;
+    
+}
+nav li a.join{
+    font-size: 1.4em;
+    color: rgb(0, 161, 145);
+}
+main{
+    max-width: 100%;
+    width: 1200px;
+    margin: 80px auto;
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+article h2{
+    color: violet;
+    font-size: 32px;
+
+}
+article p{
+    line-height: 2em;
+}
+.images{
+    text-align: center;
+    margin: 80px 0;
+    white-space: nowrap;
+}
+.images li{
+    display: inline-block;
+    width: 40%;
+    margin: 20px 5%;
+
+}
+.images li img{
+    max-width: 100%;
+
 }
