--- a/HTML CSS/layout.css
+++ b/HTML CSS/layout.css
@@ -33,7 +33,7 @@ header h2{
     
     
 }
-.welcome{
+.banner .welcome{
     position: relative;
     background-color: #ffc400;
     color: white;
@@ -95,7 +95,7 @@ main{
 }
 article h2{
     color: violet;
-    font-size: 32px;
+    font-size: 40px;
 
 }
 article p{
@@ -115,4 +115,125 @@ article p{
 .images li img{
     max-width: 100%;
 
+}
+.join p {
+    text-align: center;
+    padding: 60px;
+    background-color: rgb(202, 195, 195);
+}
+form{
+    position: relative;
+    text-align: center;
+    
+    background-color: rgb(202, 195, 195);
+    bottom: 20px;
+    padding-bottom: 20px;
+}
+input{
+    padding: 15px;
+    border-radius: 100px;
+    border: 3px solid whitesmoke;
+
+}
+.join h2{
+    text-align: center;
+}
+
+/* psuedo Class
+*/
+nav li a:hover{
+    text-decoration: underline;
+}
+
+.images li:hover{
+    position: relative;
+    top: -6px;
+    font-size: 1.9em;
+
+}
+form input:focus{
+    border: 4px dashed #4b4b4b;
+    outline: none;
+}
+form input:valid{
+    border: 3px solid greenyellow;
+}
+article p::first-line{
+    font-weight: bold;
+    font-size: 1.2em;
+
+}
+section.join p::first-letter{
+    font-size: 1.5em;
+}
+p::selection{
+    background-color: red;
+} 
+
+p::after{
+    content: '...';
+}
+
+/*Responsive Styles*/
+
+@media screen and (max-width: 800px){
+    .banner .welcome h2{
+     font-size: 30px;
+    }
+    nav li{
+        font-size: 18px;
+    }
+    ul li a{
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 500px){
+    .banner .welcome{
+    position: relative;
+    
+     padding: 5px;
+     text-align: center;
+    }
+    ul li a{
+        font-size: 15px;
+    }
+    .banner .welcome br{
+        display: none;
+    }
+    .banner .welcome span{
+    font-size: 1em;
+    }
+    .images li{
+        width: 100%;
+        margin: 20px auto;
+        display: block;
+    }
+    nav li{
+        font-size: 20px;
+        display: block;
+        width: 100%;
+        margin: 12px 0;
+
+    }
+    header{
+        position: relative;
+    }
+    nav{
+        top: -30px;
+    }
+}
+@media screen and(max-widh: 350px){
+    nav li{
+        font-size: 20px;
+        display: block;
+        width: 100%;
+        margin: 12px 0;
+
+    }
+    header{
+        position: relative;
+    }
+    nav{
+        top: 0px;
+    }
 }
